
add_executable(echoserver_unittest EchoServer_unittest.cc)
target_link_libraries(echoserver_unittest muduo_net)

add_executable(echoclient_unittest EchoClient_unittest.cc)
target_link_libraries(echoclient_unittest muduo_net)

add_executable(EventLoop_unittest EventLoop_unittest.cc)
target_link_libraries(EventLoop_unittest muduo_net)

add_executable(TimeQueue_unittest TimeQueue_unittest.cc)
target_link_libraries(TimeQueue_unittest muduo_net)

if(BOOSTTEST_LIBRARY)
add_executable(buffer_unittest Buffer_unittest.cc)
target_link_libraries(buffer_unittest muduo_net boost_unit_test_framework)
add_test(NAME buffer_unittest COMMAND buffer_unittest)
endif()

add_executable(Channel_unittest Channel_unittest.cc)
target_link_libraries(Channel_unittest muduo_net)